# cpp_project_template

./: .gitignore  CMakeLists.txt  README.md
include/: template_header.hpp
source/: CMakeLists.txt  template_lib.cpp
tests/: CMakeLists.txt  temp_test.cpp
